--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -2,7 +2,7 @@
 
     <footer>
         <img style="width: 140px; margin-top: 20px;" src="{{ asset('images/AquaHippique.png') }}" alt="logoFooter" />
-        <p>Site crée par HASAN, KEVIN, TIFFANY, XAVIER et <del> AURELIEN </del> <i class="fas fa-skull"></i></p>
+        <p>Site créée par HASAN, KEVIN, TIFFANY, XAVIER et <del> AURELIEN </del> <i class="fas fa-skull"></i></p>
     </footer>
 
 {% endblock %}
