medaille + medaille + medaille

--- a/app/Resources/views/resultats/index.html.twig
+++ b/app/Resources/views/resultats/index.html.twig
@@ -36,7 +36,7 @@
                     <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleOr }}</td>
                     <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleArgent }}</td>
                     <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleBronze }}</td>
-                    <td style="vertical-align:middle; width: 100px;">{{ equipe.totalMedailles }}</td>
+                    <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleOr + equipe.medailleArgent + equipe.medailleBronze }}</td>
                 </tr>
             {% endfor %}
             </tbody>
