BASE DE DONNE SQL !!! OUBLIEZ PAS DE CHANGER LE PARAM.YML

--- a/app/Resources/views/competition/index.html.twig
+++ b/app/Resources/views/competition/index.html.twig
@@ -298,6 +298,7 @@
 		}
 		.myProgress {
 			width: 100%;
+			background-color: green;
 
 		}
 		.myBar1,
@@ -334,7 +335,7 @@
 			width: 0;
 			height: 1em;
 			margin-bottom: 2.5em;
-
+			background-color: red;
 			color: rgba(#254986, 0);
 			padding: 0.3em 0.5em;
 			font-size: 1.1em;
